--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,35 @@
 <head>
     
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- 🔍 SEO Básico -->
+    <title>Ándale Socio - Muestra tu negocio y recibe pedidos por WhatsApp</title>
+    <meta name="description" content="Con Ándale Socio puedes mostrar tu negocio en línea, compartir tu catálogo y recibir pedidos fácilmente por WhatsApp." />
+    <meta name="keywords" content="ándale, socio, negocios, whatsapp, pedidos, catálogo, tienda online, emprendedores" />
+    <meta name="author" content="ARCANA CORP" />
+
+    <!-- 📱 App Meta -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Ándale Socio" />
+
+    <!-- 🌐 Open Graph (para Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://socio.kuyaay.com/" />
+    <meta property="og:title" content="Ándale Socio - Tu negocio en línea" />
+    <meta property="og:description" content="Publica tu catálogo y recibe pedidos directo a tu WhatsApp. Fácil, rápido y gratis." />
+    <meta property="og:image" content="https://socio.kuyaay.com/og-image.png" />
+    <meta property="og:site_name" content="Ándale Socio" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- 🐦 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ándale Socio - Tu negocio en línea" />
+    <meta name="twitter:description" content="Publica tu catálogo y recibe pedidos directo a tu WhatsApp. Fácil, rápido y gratis." />
+    <meta name="twitter:image" content="https://socio.kuyaay.com/og-image.png" />
+    <meta name="twitter:site" content="@andalesocio" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -13,8 +40,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-
-    <title>MyBuss</title>
 
 </head>
 <body>
